Lock dependencies when building with old compiler
The build matrix includes an old version of Rust to test compatibility
with older versions of the compiler. This is to ensure that the library
will be usable on old LTS releases that may have an older compiler.
However, this build configuration is fragile, because dependencies often
introduce the use of newer language constructs that are not available on
older versions of the compiler.

To make CI more stable with older compilers, a `Cargo.lock` is added to
lock the dependencies when running this build configuration. This works
with a general-purpose mechanism for symlinking files from
`ci/$TRAVIS_RUST_VERSION` before running a build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ before_install:
   - pkg-config --list-all
   - pkg-config --libs libudev
   - pkg-config --modversion libudev
+  - if [ -d "ci/$TRAVIS_RUST_VERSION" ]; then find "ci/$TRAVIS_RUST_VERSION" -mindepth 1 -maxdepth 1 -exec ln -s '{}' . \; ; fi
